pdf export fix trail name alignment & taxon name size

--- a/services/squelettes/styles/panneau.css
+++ b/services/squelettes/styles/panneau.css
@@ -45,10 +45,10 @@ body {
 
 .panneau-nom-sentier {
 	position: relative;
-	bottom: 0px;
+	bottom: -15px;
 	display: flex;
 	align-items: center;
-	height: 75px;
+	/*height: 75px;*/
 	padding-left: 10px;
 	margin-top: 13px;
 	width: 500px;
@@ -143,11 +143,11 @@ body {
 }
 
 .panneau-nom-vernaculaire-grand {
-	font-size: 40px;
+	font-size: 30px;
 }
 
 .panneau-nom-vernaculaire-tres-grand {
-	font-size: 40px;
+	font-size: 20px;
 }
 
 .panneau-description {
